# pkg/model/request/auth.go
@@ -1,0 +1,8 @@
+package request
+
+import "loan-service/internal/constant"
+
+type MockLogin struct {
+	Email string            `json:"email"`
+	Role  constant.UserRole `json:"role"`
+}
